// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppResourcesAside (expanded case) expanded case 1`] = `
<DocumentFragment>
  <aside
    class="
        !gap-2 sm:overflow-visible
        flex flex-col gap-4 overflow-scroll
  overflow-x-auto [overflow-y:overlay] [scrollbar-gutter:auto] 
      "
  >
    <ul
      class=" flex flex-1 flex-col gap-1 overflow-auto"
      role="tree"
    >
      <li
        aria-expanded="false"
        aria-labelledby="app-resources-tree-4-label"
        class="flex flex-col gap-2"
        id="app-resources-tree-4-li"
        role="treeitem"
      >
        <button
          aria-controls="app-resources-tree-4-li"
          class="link inline text-left font-bold"
          id="app-resources-tree-4-label"
          type="button"
        >
          Global Resources 
          <span
            class="pl-2 text-neutral-500"
          >
            (2)
          </span>
        </button>
      </li>
      <li
        aria-expanded="true"
        aria-labelledby="app-resources-tree-5-label"
        class="flex flex-col gap-2"
        id="app-resources-tree-5-li"
        role="treeitem"
      >
        <button
          aria-controls="app-resources-tree-5-li"
          class="link inline text-left font-bold"
          id="app-resources-tree-5-label"
          type="button"
        >
          Discipline Resources 
          <span
            class="pl-2 text-neutral-500"
          >
            (4)
          </span>
        </button>
        <ul
          aria-label="Sub-categories"
          class=" flex flex-col gap-2 pl-4"
          role="group"
        >
          <li
            aria-expanded="false"
            aria-labelledby="app-resources-tree-6-label"
            class="flex flex-col gap-2"
            id="app-resources-tree-6-li"
            role="treeitem"
          >
            <button
              aria-controls="app-resources-tree-6-li"
              class="link inline text-left font-bold"
              id="app-resources-tree-6-label"
              type="button"
            >
              Botany 
              <span
                class="pl-2 text-neutral-500"
              >
                (4)
              </span>
            </button>
          </li>
        </ul>
      </li>
    </ul>
    <div
      class="flex flex-wrap gap-2"
    >
      <button
        class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:dark:ring-neutral-500 disabled:ring-gray-400 disabled:text-gray-500 
    dark:disabled:!bg-neutral-700 gap-2 inline-flex items-center capitalize justify-center shadow-sm dialog-icon-info hover:brightness-90 dark:hover:brightness-150 bg-[color:var(--info-button-color)] text-white grow"
        type="button"
      >
        Expand All
      </button>
      <button
        class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:dark:ring-neutral-500 disabled:ring-gray-400 disabled:text-gray-500 
    dark:disabled:!bg-neutral-700 gap-2 inline-flex items-center capitalize justify-center shadow-sm dialog-icon-info hover:brightness-90 dark:hover:brightness-150 bg-[color:var(--info-button-color)] text-white grow"
        type="button"
      >
        Collapse All
      </button>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`AppResourcesAside (expanded case) expanded case 2`] = `
<DocumentFragment>
  <aside
    class="
        !gap-2 sm:overflow-visible
        flex flex-col gap-4 overflow-scroll
  overflow-x-auto [overflow-y:overlay] [scrollbar-gutter:auto] 
      "
  >
    <ul
      class=" flex flex-1 flex-col gap-1 overflow-auto"
      role="tree"
    >
      <li
        aria-expanded="true"
        aria-labelledby="app-resources-tree-9-label"
        class="flex flex-col gap-2"
        id="app-resources-tree-9-li"
        role="treeitem"
      >
        <button
          aria-controls="app-resources-tree-9-li"
          class="link inline text-left font-bold"
          id="app-resources-tree-9-label"
          type="button"
        >
          Global Resources 
          <span
            class="pl-2 text-neutral-500"
          >
            (2)
          </span>
        </button>
        <ul
          aria-label="Resources"
          class=" pl-4"
          role="group"
        >
          <li>
            <a
              class="link [&:not([aria-current]):not(:hover)]:!text-neutral-500"
              href="/specify/resources/app-resource/1/"
            >
              <span
                aria-hidden="true"
                title="Other Properties Resource"
              >
                <svg
                  aria-hidden="true"
                  class="w-6 h-6 flex-shrink-0"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm0 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm0 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm0 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              Global Preferences
            </a>
          </li>
          <li>
            <a
              class="link [&:not([aria-current]):not(:hover)]:!text-neutral-500"
              href="/specify/resources/app-resource/2/"
            >
              <span
                aria-hidden="true"
                title="Other Properties Resource"
              >
                <svg
                  aria-hidden="true"
                  class="w-6 h-6 flex-shrink-0"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm0 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm0 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm0 4a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              Remote Preferences
            </a>
          </li>
          <li>
            <a
              class="link"
              href="/specify/resources/create/globalResource/"
            >
              <span
                class="!text-green-700 print:hidden"
              >
                <svg
                  aria-hidden="true"
                  class="w-6 h-6 flex-shrink-0"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              Add Resource
            </a>
          </li>
        </ul>
      </li>
      <li
        aria-expanded="true"
        aria-labelledby="app-resources-tree-10-label"
        class="flex flex-col gap-2"
        id="app-resources-tree-10-li"
        role="treeitem"
      >
        <button
          aria-controls="app-resources-tree-10-li"
          class="link inline text-left font-bold"
          id="app-resources-tree-10-label"
          type="button"
        >
          Discipline Resources 
          <span
            class="pl-2 text-neutral-500"
          >
            (4)
          </span>
        </button>
        <ul
          aria-label="Sub-categories"
          class=" flex flex-col gap-2 pl-4"
          role="group"
        >
          <li
            aria-expanded="true"
            aria-labelledby="app-resources-tree-11-label"
            class="flex flex-col gap-2"
            id="app-resources-tree-11-li"
            role="treeitem"
          >
            <button
              aria-controls="app-resources-tree-11-li"
              class="link inline text-left font-bold"
              id="app-resources-tree-11-label"
              type="button"
            >
              Botany 
              <span
                class="pl-2 text-neutral-500"
              >
                (4)
              </span>
            </button>
            <ul
              aria-label="Resources"
              class=" pl-4"
              role="group"
            >
              <li>
                <a
                  class="link"
                  href="/specify/resources/create/discipline_3/"
                >
                  <span
                    class="!text-green-700 print:hidden"
                  >
                    <svg
                      aria-hidden="true"
                      class="w-6 h-6 flex-shrink-0"
                      fill="currentColor"
                      viewBox="0 0 20 20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  Add Resource
                </a>
              </li>
            </ul>
            <ul
              aria-label="Sub-categories"
              class=" flex flex-col gap-2 pl-4"
              role="group"
            >
              <li
                aria-expanded="true"
                aria-labelledby="app-resources-tree-12-label"
                class="flex flex-col gap-2"
                id="app-resources-tree-12-li"
                role="treeitem"
              >
                <button
                  aria-controls="app-resources-tree-12-li"
                  class="link inline text-left font-bold"
                  id="app-resources-tree-12-label"
                  type="button"
                >
                  c 
                  <span
                    class="pl-2 text-neutral-500"
                  >
                    (4)
                  </span>
                </button>
                <ul
                  aria-label="Resources"
                  class=" pl-4"
                  role="group"
                >
                  <li>
                    <a
                      class="link [&:not([aria-current]):not(:hover)]:!text-neutral-500"
                      href="/specify/resources/app-resource/6/"
                    >
                      <span
                        aria-hidden="true"
                        title="Collection Preferences"
                      >
                        <svg
                          aria-hidden="true"
                          class="w-6 h-6 flex-shrink-0"
                          fill="currentColor"
                          viewBox="0 0 20 20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      Collection Preferences
                    </a>
                  </li>
                  <li>
                    <a
                      class="link"
                      href="/specify/resources/create/collection_4/"
                    >
                      <span
                        class="!text-green-700 print:hidden"
                      >
                        <svg
                          aria-hidden="true"
                          class="w-6 h-6 flex-shrink-0"
                          fill="currentColor"
                          viewBox="0 0 20 20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      Add Resource
                    </a>
                  </li>
                </ul>
                <ul
                  aria-label="Sub-categories"
                  class=" flex flex-col gap-2 pl-4"
                  role="group"
                >
                  <li
                    aria-expanded="true"
                    aria-labelledby="app-resources-tree-13-label"
                    class="flex flex-col gap-2"
                    id="app-resources-tree-13-li"
                    role="treeitem"
                  >
                    <button
                      aria-controls="app-resources-tree-13-li"
                      class="link inline text-left font-bold"
                      id="app-resources-tree-13-label"
                      type="button"
                    >
                      User Accounts 
                      <span
                        class="pl-2 text-neutral-500"
                      >
                        (3)
                      </span>
                    </button>
                    <ul
                      aria-label="Sub-categories"
                      class=" flex flex-col gap-2 pl-4"
                      role="group"
                    >
                      <li
                        aria-expanded="true"
                        aria-labelledby="app-resources-tree-14-label"
                        class="flex flex-col gap-2"
                        id="app-resources-tree-14-li"
                        role="treeitem"
                      >
                        <button
                          aria-controls="app-resources-tree-14-li"
                          class="link inline text-left font-bold"
                          id="app-resources-tree-14-label"
                          type="button"
                        >
                          testiiif 
                          <span
                            class="pl-2 text-neutral-500"
                          >
                            (3)
                          </span>
                        </button>
                        <ul
                          aria-label="Resources"
                          class=" pl-4"
                          role="group"
                        >
                          <li>
                            <a
                              class="link [&:not([aria-current]):not(:hover)]:!text-neutral-500"
                              href="/specify/resources/app-resource/5/"
                            >
                              <span
                                aria-hidden="true"
                                title="User Preferences"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="w-6 h-6 flex-shrink-0"
                                  fill="currentColor"
                                  viewBox="0 0 20 20"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                              User Preferences
                            </a>
                          </li>
                          <li>
                            <a
                              class="link [&:not([aria-current]):not(:hover)]:!text-neutral-500"
                              href="/specify/resources/app-resource/4/"
                            >
                              <span
                                aria-hidden="true"
                                title="Other XML Resource"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="w-6 h-6 flex-shrink-0"
                                  fill="currentColor"
                                  viewBox="0 0 20 20"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M12.316 3.051a1 1 0 01.633 1.265l-4 12a1 1 0 11-1.898-.632l4-12a1 1 0 011.265-.633zM5.707 6.293a1 1 0 010 1.414L3.414 10l2.293 2.293a1 1 0 11-1.414 1.414l-3-3a1 1 0 010-1.414l3-3a1 1 0 011.414 0zm8.586 0a1 1 0 011.414 0l3 3a1 1 0 010 1.414l-3 3a1 1 0 11-1.414-1.414L16.586 10l-2.293-2.293a1 1 0 010-1.414z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                              QueryExtraList
                            </a>
                          </li>
                          <li>
                            <a
                              class="link [&:not([aria-current]):not(:hover)]:!text-neutral-500"
                              href="/specify/resources/app-resource/3/"
                            >
                              <span
                                aria-hidden="true"
                                title="Other XML Resource"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="w-6 h-6 flex-shrink-0"
                                  fill="currentColor"
                                  viewBox="0 0 20 20"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M12.316 3.051a1 1 0 01.633 1.265l-4 12a1 1 0 11-1.898-.632l4-12a1 1 0 011.265-.633zM5.707 6.293a1 1 0 010 1.414L3.414 10l2.293 2.293a1 1 0 11-1.414 1.414l-3-3a1 1 0 010-1.414l3-3a1 1 0 011.414 0zm8.586 0a1 1 0 011.414 0l3 3a1 1 0 010 1.414l-3 3a1 1 0 11-1.414-1.414L16.586 10l-2.293-2.293a1 1 0 010-1.414z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                              QueryFreqList
                            </a>
                          </li>
                          <li>
                            <a
                              class="link"
                              href="/specify/resources/create/collection_4_user_1/"
                            >
                              <span
                                class="!text-green-700 print:hidden"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="w-6 h-6 flex-shrink-0"
                                  fill="currentColor"
                                  viewBox="0 0 20 20"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                              Add Resource
                            </a>
                          </li>
                        </ul>
                      </li>
                    </ul>
                  </li>
                  <li
                    aria-expanded="true"
                    aria-labelledby="app-resources-tree-15-label"
                    class="flex flex-col gap-2"
                    id="app-resources-tree-15-li"
                    role="treeitem"
                  >
                    <button
                      aria-controls="app-resources-tree-15-li"
                      class="link inline text-left font-bold"
                      id="app-resources-tree-15-label"
                      type="button"
                    >
                      User Types 
                      <span
                        class="pl-2 text-neutral-500"
                      >
                        (0)
                      </span>
                    </button>
                    <ul
                      aria-label="Sub-categories"
                      class=" flex flex-col gap-2 pl-4"
                      role="group"
                    >
                      <li
                        aria-expanded="false"
                        aria-labelledby="app-resources-tree-16-label"
                        class="flex flex-col gap-2"
                        id="app-resources-tree-16-li"
                        role="treeitem"
                      >
                        <button
                          aria-controls="app-resources-tree-16-li"
                          class="link inline text-left font-bold"
                          id="app-resources-tree-16-label"
                          type="button"
                        >
                          FullAccess 
                          <span
                            class="pl-2 text-neutral-500"
                          >
                            (0)
                          </span>
                        </button>
                      </li>
                      <li
                        aria-expanded="false"
                        aria-labelledby="app-resources-tree-17-label"
                        class="flex flex-col gap-2"
                        id="app-resources-tree-17-li"
                        role="treeitem"
                      >
                        <button
                          aria-controls="app-resources-tree-17-li"
                          class="link inline text-left font-bold"
                          id="app-resources-tree-17-label"
                          type="button"
                        >
                          Guest 
                          <span
                            class="pl-2 text-neutral-500"
                          >
                            (0)
                          </span>
                        </button>
                      </li>
                      <li
                        aria-expanded="false"
                        aria-labelledby="app-resources-tree-18-label"
                        class="flex flex-col gap-2"
                        id="app-resources-tree-18-li"
                        role="treeitem"
                      >
                        <button
                          aria-controls="app-resources-tree-18-li"
                          class="link inline text-left font-bold"
                          id="app-resources-tree-18-label"
                          type="button"
                        >
                          LimitedAccess 
                          <span
                            class="pl-2 text-neutral-500"
                          >
                            (0)
                          </span>
                        </button>
                      </li>
                      <li
                        aria-expanded="false"
                        aria-labelledby="app-resources-tree-19-label"
                        class="flex flex-col gap-2"
                        id="app-resources-tree-19-li"
                        role="treeitem"
                      >
                        <button
                          aria-controls="app-resources-tree-19-li"
                          class="link inline text-left font-bold"
                          id="app-resources-tree-19-label"
                          type="button"
                        >
                          Manager 
                          <span
                            class="pl-2 text-neutral-500"
                          >
                            (0)
                          </span>
                        </button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
    <div
      class="flex flex-wrap gap-2"
    >
      <button
        class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:dark:ring-neutral-500 disabled:ring-gray-400 disabled:text-gray-500 
    dark:disabled:!bg-neutral-700 gap-2 inline-flex items-center capitalize justify-center shadow-sm dialog-icon-info hover:brightness-90 dark:hover:brightness-150 bg-[color:var(--info-button-color)] text-white grow"
        type="button"
      >
        Expand All
      </button>
      <button
        class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:dark:ring-neutral-500 disabled:ring-gray-400 disabled:text-gray-500 
    dark:disabled:!bg-neutral-700 gap-2 inline-flex items-center capitalize justify-center shadow-sm dialog-icon-info hover:brightness-90 dark:hover:brightness-150 bg-[color:var(--info-button-color)] text-white grow"
        type="button"
      >
        Collapse All
      </button>
    </div>
  </aside>
</DocumentFragment>
`;

exports[`AppResourcesAside (simple no conformation case) simple no conformation case 1`] = `
<DocumentFragment>
  <aside
    class="
        !gap-2 sm:overflow-visible
        flex flex-col gap-4 overflow-scroll
  overflow-x-auto [overflow-y:overlay] [scrollbar-gutter:auto] 
      "
  >
    <ul
      class=" flex flex-1 flex-col gap-1 overflow-auto"
      role="tree"
    >
      <li
        aria-expanded="false"
        aria-labelledby="app-resources-tree-0-label"
        class="flex flex-col gap-2"
        id="app-resources-tree-0-li"
        role="treeitem"
      >
        <button
          aria-controls="app-resources-tree-0-li"
          class="link inline text-left font-bold"
          id="app-resources-tree-0-label"
          type="button"
        >
          Global Resources 
          <span
            class="pl-2 text-neutral-500"
          >
            (2)
          </span>
        </button>
      </li>
      <li
        aria-expanded="false"
        aria-labelledby="app-resources-tree-1-label"
        class="flex flex-col gap-2"
        id="app-resources-tree-1-li"
        role="treeitem"
      >
        <button
          aria-controls="app-resources-tree-1-li"
          class="link inline text-left font-bold"
          id="app-resources-tree-1-label"
          type="button"
        >
          Discipline Resources 
          <span
            class="pl-2 text-neutral-500"
          >
            (4)
          </span>
        </button>
      </li>
    </ul>
    <div
      class="flex flex-wrap gap-2"
    >
      <button
        class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:dark:ring-neutral-500 disabled:ring-gray-400 disabled:text-gray-500 
    dark:disabled:!bg-neutral-700 gap-2 inline-flex items-center capitalize justify-center shadow-sm dialog-icon-info hover:brightness-90 dark:hover:brightness-150 bg-[color:var(--info-button-color)] text-white grow"
        type="button"
      >
        Expand All
      </button>
      <button
        class="button rounded cursor-pointer active:brightness-80 px-4 py-2
    disabled:bg-gray-200 disabled:dark:ring-neutral-500 disabled:ring-gray-400 disabled:text-gray-500 
    dark:disabled:!bg-neutral-700 gap-2 inline-flex items-center capitalize justify-center shadow-sm dialog-icon-info hover:brightness-90 dark:hover:brightness-150 bg-[color:var(--info-button-color)] text-white grow"
        type="button"
      >
        Collapse All
      </button>
    </div>
  </aside>
</DocumentFragment>
`;
